<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-53dp"
        tools:layout_editor_absoluteY="48dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow>

                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:text="@string/keyword_search_text" />

                <EditText
                    android:id="@+id/keyword_search_text"
                    android:layout_span="2"
                    android:layout_weight="4" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:text="@string/date_from_text" />

                <EditText
                    android:id="@+id/date_from_text"
                    android:layout_weight="4" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:text="@string/date_to_text" />

                <EditText
                    android:id="@+id/date_to_text"
                    android:layout_weight="4" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:text="@string/lat_text" />

                <EditText
                    android:id="@+id/lat_text"
                    android:layout_span="2"
                    android:layout_weight="4" />
            </TableRow>

            <TableRow>

                <TextView
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:text="@string/lng_text" />

                <EditText
                    android:id="@+id/lng_text"
                    android:layout_span="2"
                    android:layout_weight="4" />
            </TableRow>

            <TableRow>

                <Button
                    android:id="@+id/btnApplySearch"
                    android:layout_weight="1"
                    android:text="@string/apply_search_button" />

                <Button
                    android:id="@+id/btnClear"
                    android:layout_weight="1"
                    android:text="@string/search_clear_button" />
            </TableRow>
        </TableLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>